@@ -3,10 +3,10 @@ title: Utilice los recursos conectados para compartir recursos de DAM en [!DNL S
 description: Utilice los recursos disponibles en una implementación remota [!DNL Adobe Experience Manager Assets] deployment when creating your web pages on another [!DNL Adobe Experience Manager Sites] .
 contentOwner: AG
 translation-type: tm+mt
-source-git-commit: 29c3ca56281c482f195d84590ceb4ef07c556e64
+source-git-commit: caf50490c573c2f119f2cbfa14ee7cca12854364
 workflow-type: tm+mt
-source-wordcount: '2240'
-ht-degree: 41%
+source-wordcount: '2688'
+ht-degree: 28%
 
 ---
 
@@ -45,16 +45,17 @@ Los autores buscan imágenes y los siguientes tipos de documentos en el Buscador
 
 ### Usuarios y grupos implicados {#users-and-groups-involved}
 
-A continuación se describen las distintas funciones que se usan para configurar y utilizar la capacidad y sus grupos de usuarios correspondientes. El ámbito local se utiliza para el caso de uso en el que un autor crea una página web. El ámbito remoto se utiliza para la implementación de DAM que aloja los recursos necesarios. El autor [!DNL Sites] obtiene estos recursos remotos.
+A continuación se describen las distintas funciones que se usan para configurar y utilizar la capacidad y sus grupos de usuarios correspondientes. El ámbito local se utiliza para el caso de uso en el que un autor crea una página web. El ámbito remoto se utiliza para la implementación de DAM. El autor [!DNL Sites] obtiene estos recursos remotos.
 
 | Función | Ámbito | Grupo de usuarios | Nombre de usuario en la introducción | Requisito |
-|----------------------------------|--------|------------------------------------------------------------------------------|--------------------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+|------|--------|-----------|-----|----------|
 | [!DNL Sites] administrador | Local | [!DNL Experience Manager] `administrators` | `admin` | Configure [!DNL Experience Manager] y configure la integración con la implementación remota [!DNL Assets]. |
 | Usuario DAM | Local | `Authors` | `ksaner` | Se utiliza para ver y duplicar los recursos recuperados en `/content/DAM/connectedassets/`. |
-| [!DNL Sites] author | Local | `Authors` (con acceso de lectura en el DAM remoto y acceso de autor en local  [!DNL Sites]) | `ksaner` | Los usuarios finales son [!DNL Sites] autores que utilizan esta integración para mejorar la velocidad de contenido. Los autores buscan y exploran recursos en DAM remoto mediante [!UICONTROL Buscador de contenido] y utilizando las imágenes requeridas en las páginas Web locales. Se utilizan las credenciales del usuario de DAM `ksaner`. |
+| [!DNL Sites] author | Local | <ul><li>`Authors` (con acceso de lectura en el DAM remoto y acceso de autor en local  [!DNL Sites]) </li> <li>`dam-users` en local  [!DNL Sites]</li></ul> | `ksaner` | Los usuarios finales son [!DNL Sites] autores que utilizan esta integración para mejorar la velocidad de contenido. Los autores buscan y exploran recursos en DAM remoto mediante [!UICONTROL Buscador de contenido] y utilizando las imágenes requeridas en las páginas Web locales. Se utilizan las credenciales del usuario de DAM `ksaner`. |
 | [!DNL Assets] administrador | Remoto | [!DNL Experience Manager] `administrators` | `admin` en remoto  [!DNL Experience Manager] | Configurar el intercambio de recursos de origen cruzado (CORS). |
 | Usuario DAM | Remoto | `Authors` | `ksaner` en remoto  [!DNL Experience Manager] | Función de autor en la implementación remota [!DNL Experience Manager]. Busque y examine recursos en Recursos conectados mediante el [!UICONTROL Buscador de contenido]. |
-| Distribuidor DAM (usuario técnico) | Remoto | [!DNL Sites] `Authors` | `ksaner` en remoto  [!DNL Experience Manager] | Este usuario presente en la implementación remota lo utiliza el servidor local [!DNL Experience Manager] (no la función de autor [!DNL Sites]) para recuperar los recursos remotos, en nombre del autor [!DNL Sites]. Esta función no es la misma que las dos funciones `ksaner` anteriores y pertenece a un grupo de usuarios diferente. |
+| Distribuidor DAM (usuario técnico) | Remoto | <ul> <li> [!DNL Sites] `Authors`</li> <li> `connectedassets-assets-techaccts` </li> </ul> | `ksaner` en remoto  [!DNL Experience Manager] | Este usuario presente en la implementación remota lo utiliza el servidor local [!DNL Experience Manager] (no la función de autor [!DNL Sites]) para recuperar los recursos remotos, en nombre del autor [!DNL Sites]. Esta función no es la misma que las dos funciones `ksaner` anteriores y pertenece a un grupo de usuarios diferente. |
+| [!DNL Sites] usuario técnico | Local | `connectedassets-sites-techaccts` | - | Permite que la implementación [!DNL Assets] busque referencias a recursos en las [!DNL Sites] páginas Web. |
 
 ## Configurar una conexión entre [!DNL Sites] y [!DNL Assets] implementaciones {#configure-a-connection-between-sites-and-assets-deployments}
 
@@ -62,29 +63,28 @@ Un administrador [!DNL Experience Manager] puede crear esta integración. Una ve
 
 Para configurar los recursos conectados y la conectividad [!DNL Sites] local, siga estos pasos:
 
-1. Acceda a una implementación existente [!DNL Sites] o cree una implementación con el siguiente comando:
+1. Acceda a una implementación [!DNL Sites] existente. Esta [!DNL Sites] implementación se utiliza para la creación de páginas Web, por ejemplo en `https://[sites_servername]:port`. A medida que la creación de páginas se produce en la implementación [!DNL Sites], llamemos a la implementación [!DNL Sites] como local desde la perspectiva de la creación de páginas.
 
-   1. En la carpeta del archivo JAR, ejecute el siguiente comando en un terminal para crear cada servidor [!DNL Experience Manager].
-      `java -XX:MaxPermSize=768m -Xmx4096m -jar <quickstart jar filepath> -r samplecontent -p 4502 -nofork -gui -nointeractive &`
+1. Acceda a una implementación [!DNL Assets] existente. Esta [!DNL Assets] implementación se utiliza para administrar recursos digitales, por ejemplo en `https://[assets_servername]:port`.
 
-   1. Después de unos minutos, el servidor [!DNL Experience Manager] inicio correctamente. Considere esta [!DNL Sites] implementación como el equipo local para la creación de páginas Web, digamos en `https://[local_sites]:4502`.
+1. Asegúrese de que los usuarios y las funciones con el ámbito adecuado existan en la implementación [!DNL Sites] y en la implementación [!DNL Assets] en AMS. Cree un usuario técnico en la implementación [!DNL Assets] y añádalo al grupo de usuarios mencionado en [usuarios y grupos involucrados](/help/assets/use-assets-across-connected-assets-instances.md#users-and-groups-involved).
 
-1. Asegúrese de que los usuarios y las funciones con ámbito local existan en la implementación [!DNL Sites] y en la implementación [!DNL Assets] en AMS. Cree un usuario técnico en la implementación [!DNL Assets] y añádalo al grupo de usuarios mencionado en [usuarios y grupos involucrados](/help/assets/use-assets-across-connected-assets-instances.md#users-and-groups-involved).
+1. Acceda a la implementación local [!DNL Sites] en `https://[sites_servername]:port`. Haga clic en **[!UICONTROL Herramientas]** > **[!UICONTROL Recursos]** > **[!UICONTROL Configuración de recursos conectados]**. Proporcione los siguientes valores:
 
-1. Acceda a la implementación local [!DNL Sites] en `https://[local_sites]:4502`. Haga clic en **[!UICONTROL Herramientas]** > **[!UICONTROL Recursos]** > **[!UICONTROL Configuración de recursos conectados]** y proporcione los siguientes valores:
-
-   1. [!DNL Assets] la ubicación es  `https://[assets_servername_ams]:[port]`.
+   1. Un **[!UICONTROL Título]** de la configuración.
+   1. **[!UICONTROL Dirección]** URL de DAM remota es la dirección URL de la  [!DNL Assets] ubicación en el formato  `https://[assets_servername]:[port]`.
    1. Credenciales de un distribuidor DAM (usuario técnico).
-   1. En el campo **[!UICONTROL Punto de montaje]**, introduzca la ruta [!DNL Experience Manager] local donde [!DNL Experience Manager] busca los recursos. Por ejemplo, la carpeta `remoteassets`.
+   1. En el campo **[!UICONTROL Punto de montaje]**, introduzca la ruta [!DNL Experience Manager] local donde [!DNL Experience Manager] busca los recursos. Por ejemplo, la carpeta `connectedassets`. Los recursos que se recuperan de DAM se almacenan en esta carpeta en la implementación [!DNL Sites].
+   1. **[!UICONTROL Dirección]** URL de sitios locales es la ubicación de la  [!DNL Sites] implementación. [!DNL Assets] la implementación utiliza este valor para mantener las referencias a los recursos digitales que obtiene esta  [!DNL Sites] implementación.
+   1. Credenciales de [!DNL Sites] usuario técnico.
+   1. El valor del campo **[!UICONTROL Umbral de optimización de transferencia binaria original]** especifica si los recursos originales (incluidas las representaciones) se transfieren sincrónicamente o no. Los recursos con un tamaño de archivo más pequeño se pueden recuperar fácilmente, mientras que los recursos con un tamaño de archivo relativamente mayor se sincronizan mejor asincrónicamente. El valor depende de las capacidades de la red.
+   1. Seleccione **[!UICONTROL almacén de datos compartido con recursos conectados]**, si utiliza un almacén de datos para almacenar los recursos y este es el almacenamiento común entre ambas implementaciones de En este caso, el límite de umbral no importa, ya que los binarios de activos reales están disponibles en el almacén de datos y no se transfieren.
 
-   1. Ajuste los valores del **[!UICONTROL umbral de optimización de transferencia binaria original]** en función de la red. Las representaciones de recursos superiores a este umbral se transfieren de forma asíncrona.
-   1. Seleccione **[!UICONTROL almacén de datos compartido con recursos conectados]**, si utiliza un almacén de datos para almacenar los recursos y este es el almacenamiento común entre ambas implementaciones de En este caso, el límite de umbral no importa, ya que los binarios de activos reales se encuentran en el almacén de datos y no se transfieren.
+   ![Una configuración típica para la funcionalidad Recursos conectados](assets/connected-assets-typical-config.png)
 
-   ![Una configuración típica para los recursos conectados](assets/connected-assets-typical-config.png)
+   *Figura: Configuración típica de la funcionalidad Recursos conectados.*
 
-   *Figura: Una configuración típica para los recursos conectados.*
-
-1. Dado que los recursos ya se han procesado y se han recuperado las representaciones, deshabilite los iniciadores del flujo de trabajo. Ajuste las configuraciones del iniciador en la implementación local ([!DNL Sites]) para excluir la carpeta `connectedassets`, en la que se recuperan los recursos remotos.
+1. Los recursos digitales existentes en la implementación [!DNL Assets] ya se han procesado y se han generado las representaciones. Estas funciones se recuperan con esta funcionalidad, por lo que no es necesario volver a generar las representaciones. Desactive los lanzadores de flujo de trabajo para evitar la regeneración de las representaciones. Ajuste las configuraciones del iniciador en la implementación ([!DNL Sites]) para excluir la carpeta `connectedassets` (los recursos se recuperan en esta carpeta).
 
    1. En la implementación [!DNL Sites], haga clic en **[!UICONTROL Herramientas]** > **[!UICONTROL Flujo de trabajo]** > **[!UICONTROL Lanzadores]**.
 
@@ -104,13 +104,9 @@ Para configurar los recursos conectados y la conectividad [!DNL Sites] local, si
    >
    >Todas las representaciones disponibles en la implementación remota de se recuperan cuando los autores recuperan un recurso. Si desea crear más representaciones de un recurso recuperado, omita este paso de configuración. El flujo de trabajo [!UICONTROL Recurso de actualización de DAM] se activa y crea más representaciones. Estas representaciones solo están disponibles en la implementación local [!DNL Sites] y no en la implementación remota de DAM.
 
-1. Añada la implementación [!DNL Sites] como uno de los **[!UICONTROL Orígenes permitidos]** en la configuración [!DNL Assets'] CORS remota.
+1. Añada la implementación [!DNL Sites] como un origen permitido en la configuración de CORS en la implementación [!DNL Assets]. Para obtener más información, consulte [Comprender CORS](https://experienceleague.adobe.com/docs/experience-manager-learn/foundation/security/understand-cross-origin-resource-sharing.html).
 
-   1. Inicie sesión con las credenciales del administrador. Buscar `Cross-Origin`. Acceda a **[!UICONTROL Herramientas]** > **[!UICONTROL Operaciones]** > **[!UICONTROL Consola web]**.
-
-   1. Para crear una configuración CORS para [!DNL Sites] implementación, haga clic en la opción ![Agregar icono de recursos](assets/do-not-localize/aem_assets_add_icon.png) junto a **[!UICONTROL Política de uso compartido de recursos de Adobe Granite Cross-Origen]**.
-
-   1. En el campo **[!UICONTROL Orígenes permitidos]**, introduzca la dirección URL del [!DNL Sites] local, es decir, `https://[local_sites]:[port]`. Guarde la configuración.
+<!-- TBD: Check if Launchers are to be disabled on CS instances. Is this option even available to the users on CS? -->
 
 ## Usar recursos remotos {#use-remote-assets}
 
@@ -140,13 +136,13 @@ Utilice la configuración anterior para probar la experiencia de creación y com
 
    *Figura: Opciones para filtrar tipos de documentos e imágenes al buscar recursos en DAM remoto.*
 
-1. Se notifica al creador del sitio si se busca un recurso de forma asincrónica y si falla alguna tarea de recuperación. Durante la creación o incluso después de esta, los autores pueden ver información detallada sobre las tareas de recuperación y los errores en la interfaz de usuario de [trabajos asincrónicos](/help/operations/asynchronous-jobs.md).
+1. Se notifica al creador del sitio si se busca un recurso de forma asincrónica y si falla alguna tarea de recuperación. Durante la creación o incluso después de la creación, los autores pueden ver información detallada sobre tareas de captura y errores en la interfaz de usuario [trabajos asincrónicos](/help/operations/asynchronous-jobs.md).
 
    ![Notificación sobre la captura asincrónica de recursos que se produce en segundo plano.](assets/assets_async_transfer_fails.png)
 
    *Figura: Notificación sobre la captura asincrónica de recursos que se produce en segundo plano.*
 
-1. Al publicar una página, [!DNL Experience Manager] muestra una lista completa de los recursos que se utilizan en la página. Asegúrese de que los recursos remotos se recuperan correctamente en el momento de la publicación. Para comprobar el estado de cada recurso recuperado, consulte la interfaz de usuario de [trabajos asincrónicos](/help/operations/asynchronous-jobs.md) .
+1. Al publicar una página, [!DNL Experience Manager] muestra una lista completa de los recursos que se utilizan en la página. Asegúrese de que los recursos remotos se recuperan correctamente en el momento de la publicación. Para comprobar el estado de cada recurso buscado, consulte la interfaz de usuario [trabajos asincrónicos](/help/operations/asynchronous-jobs.md).
 
    >[!NOTE]
    >
@@ -158,17 +154,24 @@ Utilice la configuración anterior para probar la experiencia de creación y com
 
 Los recursos recuperados se pueden usar como cualquier otro recurso local, pero los metadatos asociados no se pueden editar.
 
-<!-- TBD: Uncomment after verification for Dec release.
+### Comprobar el uso de un recurso en varias páginas web {#asset-usage-references}
 
-### Check use of an asset across other pages {#asset-usage-references}
+[!DNL Experience Manager] permite a los usuarios de DAM comprobar todas las referencias a un recurso. Ayuda a comprender y administrar el uso de un recurso en [!DNL Sites] remotos y en activos compuestos. Muchos autores de páginas web en la implementación [!DNL Experience Manager Sites] pueden utilizar un recurso en [!DNL Assets] remotas en diferentes páginas web. Para simplificar la administración de recursos y no generar referencias dañadas, es importante que los usuarios de DAM comprueben el uso de un recurso en las páginas web locales y remotas. La ficha [!UICONTROL Referencias] de la página [!UICONTROL Propiedades] de un recurso lista las referencias locales y remotas del recurso.
 
-[!DNL Experience Manager] also lets you check all the incoming references to an asset, that is, the usage of an asset in remote [!DNL Sites] and in compound assets. Authors of webpages on [!DNL Experience Manager Sites] deployment can use an asset on a remote [!DNL Assets] deployment using the Connected Assets functionality. The [!UICONTROL References] tab in an asset's [!UICONTROL Properties] page lists the local and remote references of the asset.
+Para vista y administración de referencias en la implementación [!DNL Assets], siga estos pasos:
 
-Users can view incoming references of the assets and move or delete the asset.
+1. Seleccione un recurso en la [!DNL Assets] consola y haga clic en **[!UICONTROL Propiedades]** en la barra de herramientas.
+1. Haga clic en la ficha **[!UICONTROL Referencias]**. Consulte **[!UICONTROL Referencias locales]** para el uso del recurso en la implementación [!DNL Assets]. Consulte **[!UICONTROL Referencias remotas] para usar el recurso en la implementación [!DNL Sites] donde se buscó el recurso mediante la funcionalidad Recursos conectados.
 
--->
+   ![referencias remotas en propiedades de recursos](assets/connected-assets-remote-reference.png)
 
-## Restricciones          y prácticas recomendadas {#tip-and-limitations}
+1. Las referencias para [!DNL Sites] páginas muestran el recuento total de referencias para cada [!DNL Sites] local. Puede tomar algún tiempo encontrar todas las referencias y mostrar el número total de referencias.
+1. La lista de referencias es interactiva y los usuarios de DAM pueden hacer clic en una referencia para abrir la página de referencia. Si por algún motivo no se pueden recuperar referencias remotas, se muestra una notificación que informa al usuario del error.
+1. Los usuarios pueden mover o eliminar el recurso. Al mover o eliminar un recurso, el número total de referencias de todos los recursos o carpetas seleccionados se muestra en un cuadro de diálogo de advertencia. Al eliminar un recurso para el que aún no se muestran las referencias, se muestra un cuadro de diálogo de advertencia.
+
+   ![Forzar advertencia de eliminación](assets/delete-referenced-asset.png)
+
+## Limitaciones y prácticas recomendadas {#tip-and-limitations}
 
 * Para obtener información sobre el uso de los recursos, configure la funcionalidad [Asset Insight](/help/assets/assets-insights.md) en la instancia [!DNL Sites].
 
@@ -198,13 +201,18 @@ Users can view incoming references of the assets and move or delete the asset.
 * Las ediciones simples que no son destructivas y que se admiten mediante el componente `Image`, se pueden realizar en los recursos recuperados. Los recursos son de solo lectura.
 * El único método para recuperar el recurso es arrastrarlo a una página. No hay soporte API ni otros métodos para recuperar un recurso para actualizarlo.
 * Si los recursos se retiran del DAM, se seguirán utilizando en [!DNL Sites] páginas.
+* Las entradas de referencia remotas de un recurso se recuperan de forma asíncrona. Las referencias y el recuento total no son en tiempo real y puede haber alguna diferencia si un autor de Sitios utiliza el recurso mientras un usuario de DAM está viendo la referencia. Los usuarios de DAM pueden actualizar la página y volver a intentarlo en unos minutos para obtener el recuento total.
 
 ## Solución de problemas {#troubleshoot}
 
-Para solucionar problemas del escenario de error común, siga estos pasos:
+Para solucionar problemas comunes, siga estos pasos:
 
 * Si no puede buscar recursos remotos desde el [!UICONTROL Buscador de contenido], asegúrese de que las funciones y los permisos necesarios estén establecidos.
 * Es posible que un recurso recuperado de la presa remota no se publique en una página web por una o varias razones. No existe en el servidor remoto, la falta de los permisos adecuados para recuperarlo o la falla de red pueden ser las razones. Asegúrese de que el recurso no se elimina del DAM remoto. Asegúrese de que se han establecido los permisos adecuados y de que se cumplen los requisitos previos. Vuelva a intentar agregar el recurso a la página y vuelva a publicarlo. Compruebe la [lista de trabajos asincrónicos](/help/operations/asynchronous-jobs.md) si hay errores en la recuperación de recursos.
 * Si no puede acceder a la implementación remota de DAM desde la implementación local [!DNL Sites], asegúrese de que se permiten cookies entre sitios. Si las cookies entre sitios están bloqueadas, es posible que las dos implementaciones de [!DNL Experience Manager] no se autentiquen. Por ejemplo: [!DNL Google Chrome] en el modo Incognito puede bloquear las cookies de terceros. Para permitir las cookies en el explorador [!DNL Chrome], haga clic en el icono &#39;ojo&#39; en la barra de direcciones, vaya a Sitio que no funciona > Bloqueado, seleccione la URL DAM remota y permita la cookie de autentificador de inicio de sesión. De forma alternativa, consulte la ayuda sobre [cómo habilitar las cookies de terceros](https://support.google.com/chrome/answer/95647).
 
    ![Error de cookie en Chrome en modo incógnito](assets/chrome-cookies-incognito-dialog.png)
+
+* Si no se recuperan las referencias remotas y se genera un mensaje de error, compruebe si la implementación de sitios está disponible y compruebe si hay problemas de conectividad de red. Vuelva a intentarlo más tarde para comprobarlo. [!DNL Assets] la implementación intenta establecer una conexión con la  [!DNL Sites] implementación dos veces y, a continuación, informa de un error.
+
+![error al volver a intentar referencias remotas de recursos](assets/reference-report-failure.png)
